# hackerrank

./: .gitignore  .gitignore.orig  HackerRank-Bridging-Header.h  HackerRank.c  HackerRank.h  LICENSE  Makefile  Makefile.tmp  README.md  StdIO.swift  main.swift
HackerRank.hsproj/: HackerRank.cabal  _acm-icpc-team.hsplay  connected-cell-in-a-grid.hs
HackerRank.xcodeproj/: project.pbxproj
alg/: acm-icpc-team-tc4.txt  angry-children.hs  chocolate-feast.hs  filling-jars.hs  flipping-bits.hs  lonely-integer.hs  love-leter-mistery.hs  maximizing-xor.hs  utopian-tree.hs
alg/arr-n-srt/: counting-sort-1.hs  counting-sort-2.hs  counting-sort-3.hs  quicksort-1-partition.hs  quicksort-2-sorting.hs  the-full-counting-sort.hs  tutorial-intro.hs
alg/combinatorics/: minimum-draws.hs  strange-grid.hs
alg/geometry/: rectangular-game.hs  sherlock-and-planes.hs
alg/graph-theory/: even-tree.cpp  snakes-and-ladders.cpp
alg/greedy/: algorithmic-crush.cpp  algorithmic-crush.hs  chief-hopper.hs  jim-and-the-orders.hs  mark-and-toys.hs
alg/linked-lists-cpp/: compare-lists.cpp  delete-node.cpp  detect-cycle.cpp  find-merge-point.cpp  get-node-value.cpp  insert-at-nth.cpp  insert-in-sorted-double-linked.cpp  insert-node-at-head.cpp  insert-node-at-tail.cpp  merge-sorted-lists.cpp  print-elements.cpp  print-revese.cpp  remove-duplicates.cpp  reverse-double-linked.cpp  reverse-list.cpp
alg/ruby-tutorials/: ruby-tutorials.rb
alg/search/: connected-cell-in-a-grid.hs
offtop/: break-a-dollar.swift  phone-numbers.hs
quora/: zip-them-up.hs
shell/: bash-tutorials.sh
(+67 files in other folders)
